statum-macros/tests/ui/invalid_validators_alias_wrong_payload.stderr
error: Error: is_in_progress must return `Result<Progress, _>` (or an equivalent alias) but found `statum :: Result < () >` with payload `()`
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:29:1
   |
29 | #[validators(TaskMachine)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_validators_alias_wrong_payload.rs:48:2
   |
48 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_validators_alias_wrong_payload.rs`
